# overpasss-ai

./: .gitignore  CONTRIBUTING.md  README.md  generator.py  index.html  main.py  manila_universities.json  mypy.ini  prompt.md  pydantic_improvement_plans.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
apps/cli/: overpass_cli.py
apps/web/: app.py
docs/: mypy_improvement_plans.md  tutorial-web.md
src/overpass_ql_gen/: __init__.py  config.py
src/overpass_ql_gen/oql_generator/: generator.py  test_generator.py
src/overpass_ql_gen/testing/: README.md  __init__.py  example_functional_testing.py  overpass_functional_tester.py  test_functional_validation.py  test_utilities.py
src/overpass_ql_gen/validation/: test_validator.py  validator.py
tests/: test_generator.py
